--- a/client/app/modules/challenge/templates/challenge.tpl.html
+++ b/client/app/modules/challenge/templates/challenge.tpl.html
@@ -23,7 +23,7 @@
 
     <br>
 
-    <div ng-if="challenge.progressIsTrue" layout="row" layout-align="center center">
+    <div ng-if="challenge.showProgress" layout="row" layout-align="center center">
         <div class="c100 p{{ challenge.progress }} big">
             <span>{{ challenge.progress }}%</span>
             <div class="slice">
