--- a/client/app/modules/idea/templates/idea-create.tpl.html
+++ b/client/app/modules/idea/templates/idea-create.tpl.html
@@ -14,7 +14,7 @@
         </md-input-container>
 
         <div>
-            <md-button style="width:100%;" ng-click="onDone()" class="md-raised">Submit Idea</md-button>
+            <md-button style="width:100%;" ng-click="onDone()" class="md-raised" analytics-on analytics-event="createIdea">Submit Idea</md-button>
         </div>
     </md-form>
 </md-content>
