--- a/client/app/modules/notification/templates/toast.tpl.html
+++ b/client/app/modules/notification/templates/toast.tpl.html
@@ -1,6 +1,6 @@
 <md-toast>
     <span flex>{{message}}</span>
-    <md-button ng-click="closeToast()">
+    <md-button ng-click="closeToast()" analytics-on analytics-event="closeLocalToast">
         Close
     </md-button>
 </md-toast>
