--- a/client/app/modules/workspace/templates/modal/addResourceModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/addResourceModal.tpl.html
@@ -2,7 +2,7 @@
     <md-toolbar>
         <div layout="row">
             <div flex></div>
-            <md-button class="md-fab" ng-click="addUrl(url)">
+            <md-button class="md-fab" ng-click="addUrl(url)" analytics-on analytics-event="createLink">
                 <i class="fa fa-save"></i>
             </md-button>
             <md-button class="md-fab" ng-click="cancel()">
