Fixed idea title edit and added idea removal

--- a/client/app/modules/idea/templates/idea.tpl.html
+++ b/client/app/modules/idea/templates/idea.tpl.html
@@ -23,6 +23,10 @@
                 <i class="fa fa-pencil-square-o baseColor"></i> Edit
             </md-button>
 
+            <md-button ng-click="removeIdea()" class="md-warn" ng-if="isOwner">
+                <i class="fa fa-trash"></i> Remove
+            </md-button>
+
             <div layout="row">
                 <div>
                     <span>
