--- a/client/app/modules/home/templates/home.tpl.html
+++ b/client/app/modules/home/templates/home.tpl.html
@@ -42,11 +42,11 @@
     </ul>
 
     <article>
-        <h1 class="center" >Popular Projects</h1>
-        <md-grid-list md-cols="3" md-row-height="400px">
+        <h1 style="font-size:3em;" class="center" >Popular Projects</h1>
+        <md-grid-list md-cols="3" md-row-height="500px">
             <md-grid-tile ng-repeat="project in projects">
-                <project-card class="md-whiteframe-z2" my-project="project" style="height: 400px; padding: 20px"></project-card> 
-            </md-grid-tile>            
+                <project-card class="md-whiteframe-z2" my-project="project" style="max-height: 410px;"></project-card> 
+            </md-grid-tile>
         </md-grid-list>
 
 
