--- a/client/app/modules/project/templates/project.tpl.html
+++ b/client/app/modules/project/templates/project.tpl.html
@@ -1,54 +1,60 @@
-<md-toolbar scroll-shrinkF>
-    <div layout="column" class="content">
-        <h1>
-            {{ project.title }}
-        </h1>        
-    </div>
+<md-content>
+    <md-content layout="row" layout-align="center" layout-margin>
+        <section class="md-whiteframe-z2" flex-gt-sm="95" layout="column">
+            <md-toolbar scroll-shrinkF layout-padding>
+                <div layout="column" class="content">
+                    <h1>
+                        {{ project.title }}
+                    </h1>        
+                </div>
 
-    <md-button class="md-fab md-raised" ng-click="follow()" style="bottom:-24px;position:absolute; right:20px;z-index : inherit" ng-class="{ 'md-accent' : isFollow }" ng-if="currentUser && !isOwner">
-        <i class="fa fa-thumbs-up"></i>
-    </md-button>
-</md-toolbar>
+                <md-button class="md-fab md-raised" ng-click="follow()" style="bottom:-24px;position:absolute; right:20px;z-index : inherit" ng-class="{ 'md-accent' : isFollow }" ng-if="currentUser && !isOwner">
+                    <i class="fa fa-thumbs-up"></i>
+                </md-button>
+            </md-toolbar>
 
-<md-content layout="column" layout-fill>
-    <h3 class="show-line-breaks">{{ project.brief }}</h3>
+            <md-content layout="column" layout-fill layout-padding>
+                <h3 class="show-line-breaks">{{ project.brief }}</h3>
 
-    <div layout="row" layout-align="center center">
-        <img ng-if="project.banner" src="{{ project.banner }}" />
-    </div>
-    
-    <div ng-if="project.showProgress" layout="row" layout-align="center center">
-        <div class="c100 p{{ project.progress }} big">
-            <span>{{ project.progress }}%</span>
-            <div class="slice">
-                <div class="bar"></div>
-                <div class="fill"></div>
-            </div>
-        </div>
-    </div>
+                <div layout="row" layout-align="center center">
+                    <img ng-if="project.banner" src="{{ project.banner }}" />
+                </div>
+                
+                <div ng-if="project.showProgress" layout="row" layout-align="center center">
+                    <div class="c100 p{{ project.progress }} big">
+                        <span>{{ project.progress }}%</span>
+                        <div class="slice">
+                            <div class="bar"></div>
+                            <div class="fill"></div>
+                        </div>
+                    </div>
+                </div>
 
-    <div layout="row">
-        <div flex></div>
-        <div>
-            <span>
-                {{ project.followers.length }}
-            </span>
-                &nbsp;
-            <span class="text-muted">
-                followers
-            </span>
-                &nbsp;
-            <span>
-                {{ project.members.length }}
-            </span>
-                &nbsp;
-            <span class="text-muted">
-                members
-            </span>
-        </div>
-    </div>
+                <div layout="row">
+                    <div flex></div>
+                    <div>
+                        <span>
+                            {{ project.followers.length }}
+                        </span>
+                            &nbsp;
+                        <span class="text-muted">
+                            followers
+                        </span>
+                            &nbsp;
+                        <span>
+                            {{ project.members.length }}
+                        </span>
+                            &nbsp;
+                        <span class="text-muted">
+                            members
+                        </span>
+                    </div>
+                </div>
 
-    <showtags entity="project"></showtags>
+                <showtags entity="project"></showtags>
 
-    <section flex ui-view="projectView"></section>
+                <section flex ui-view="projectView"></section>
+            </md-content>
+        </section>
+    </md-content>
 </md-content>
