--- a/client/app/modules/project/templates/projects-list.tpl.html
+++ b/client/app/modules/project/templates/projects-list.tpl.html
@@ -1,49 +1,7 @@
 <md-content scroller loading-method="loadMoreProjects()">
-    <md-list>
-        <md-list-item ng-repeat="project in projects" class="item-list">
-            <md-content flex-gt-sm="60" layout="row" layout-margin>
-                <section class="md-whiteframe-z2 list-card" flex-gt-sm="60" layout="column">
-                    <section layout="column" layout-fill>
-                        <md-content>
-                            <section ui-view="projectsView"></section>
-                        </md-content>
-                        <div flex="40" flex-sm="30" flex-md="25" flex-lg="15">
-                            <a ui-sref="project.home({ pid : project.accessUrl })">
-                                <img ng-src="{{ project.poster || '/images/placeholder90x90.png' }}" class="" width="100%" alt="project's poster" />
-                            </a>
-                        </div>
-                        <div ui-sref="project.home({ pid : project.accessUrl })" class="center">
-                            <h3>{{ project.title }}</h3>
-                        </div>
-                        <div ui-sref="project.home({ pid : project.accessUrl })">{{ project.owner.name }}</div>
-                        <article class="md-tile-content">
-                            <showtags entity="project"></showtags>
-                            <div>
-                                <p ng-bind-html="project.brief">
-                                </p>
-                                <div layout="row">
-                                    <div flex>
-                                    <span>
-                                    {{ project.followers.length }}
-                                    </span>
-                                    <span>
-                                        Followers
-                                    </span>
-                                    </div>
-                                    <div flex>
-                                    <span>
-                                    {{ project.members.length }}
-                                    </span>
-                                    <span>
-                                        Members
-                                    </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                    </section>
-                </section>
-            </md-content>
-        </md-list-item>
-    </md-list>
+    <md-grid-list md-cols="3" md-row-height="500px">
+            <md-grid-tile ng-repeat="project in projects">
+                <project-card class="md-whiteframe-z2" my-project="project" style="max-height: 410px;"></project-card> 
+            </md-grid-tile>
+        </md-grid-list>
 </md-content>
