--- a/client/app/modules/home/templates/home.tpl.html
+++ b/client/app/modules/home/templates/home.tpl.html
@@ -45,16 +45,11 @@
         <h1 style="font-size:3em;" class="center" >Popular Projects</h1>
         <md-grid-list md-cols="3" md-row-height="500px">
             <md-grid-tile ng-repeat="project in projects">
-                <project-card class="md-whiteframe-z2" my-project="project" style="max-height: 410px;"></project-card> 
+                <project-card class="md-whiteframe-z2" my-project="project" style="height: 410px;"></project-card> 
             </md-grid-tile>
         </md-grid-list>
-
-
     </article>
 
     <br>
     <br>
-
-    <!--<ng-include src="'modules/footer/templates/footer.tpl.html'"></ng-include>-->
-
 </md-content>
