--- a/client/app/modules/notes/templates/show-notes.tpl.html
+++ b/client/app/modules/notes/templates/show-notes.tpl.html
@@ -10,7 +10,7 @@
         <div flex offset="10">
             <h3>Comments</h3>
             <article ng-repeat="comment in note.comments">
-                <p class="note-info">Comment posted by {{ note.owner.username }} <span timeago time-ago from-time="{{ comment.createDate }}"></span></p>
+                <p class="note-info">Comment posted by {{ comment.owner.username }} <span timeago time-ago from-time="{{ comment.createDate }}"></span></p>
                 <md-button ng-if="canDeleteComment(note, comment)" ng-click="deleteComment(note, comment)" analytics-on analytics-event="deleteComment"><i class="fa fa-times"></i> Delete Comment</md-button>
                 <p ng-bind-html="comment.text | linky" class="show-line-breaks"></p>
             </article>
