Redesign challenge page fixed #148 and new comment

--- a/client/app/modules/challenge/sass/challenge.scss
+++ b/client/app/modules/challenge/sass/challenge.scss
@@ -25,4 +25,15 @@
 
 .note-info {
   font-style: italic;
+  font-size: 0.7em;
+  width: 70%;
+  margin: 0;
+}
+
+.comment-block {
+  background-color: #EEEEEE;
+}
+
+.show-line-breaks {
+  padding-left: 4%;
 }
