--- a/client/app/modules/notes/templates/show-notes.tpl.html
+++ b/client/app/modules/notes/templates/show-notes.tpl.html
@@ -9,11 +9,10 @@
 
         <div flex offset="10">
             <h3>Comments</h3>
-            <article ng-repeat="comment in note.comments">
-                <p class="note-info">Comment posted by {{ comment.owner.username }} <span timeago time-ago from-time="{{ comment.createDate }}"></span></p>
-                <md-button ng-if="canDeleteComment(note, comment)" ng-click="deleteComment(note, comment)" analytics-on analytics-event="deleteComment"><i class="fa fa-times"></i> Delete Comment</md-button>
+            <md-card class="comment-block" ng-repeat="comment in note.comments" layout-padding>
+                <p style="color: #9E9E9E;" class="note-info">Comment posted by {{ comment.owner.username }} <span timeago time-ago from-time="{{ comment.createDate }}"></span><md-button style="font-size: 0.7em;" ng-if="canDeleteComment(note, comment)" ng-click="deleteComment(note, comment)" analytics-on analytics-event="deleteComment"><i class="fa fa-times"></i> Delete Comment</md-button></p>
                 <p ng-bind-html="comment.text | linky" class="show-line-breaks"></p>
-            </article>
+            </md-card>
 
             <form ng-if="canPostComment(note)" name="commentForm" ng-submit="postComment(note)">
                 <md-input-container>
