WIP: read-only access to workspaces

--- a/client/app/modules/workspace/templates/modal/fileDetailModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/fileDetailModal.tpl.html
@@ -5,7 +5,7 @@
             <md-button class="md-fab" ng-href="{{ fileDetails.url }}" target="_blank" analytics-on analytics-event="downloadFile">
                 <i class="fa fa-download"></i>
             </md-button>
-            <md-button class="md-fab" ng-click="removeFile()" analytics-on analytics-event="deleteFile">
+            <md-button class="md-fab" ng-click="removeFile()" analytics-on analytics-event="deleteFile" ng-if="isMember || isOwner">
                 <i class="fa fa-trash"></i>
             </md-button>
             <md-button class="md-fab" ng-click="cancel()">
