Read-only access to project workspace, except etherpad

--- a/client/app/modules/workspace/templates/notes.tpl.html
+++ b/client/app/modules/workspace/templates/notes.tpl.html
@@ -7,7 +7,7 @@
 </md-toolbar>
 
 <md-content flex>
-    <md-content class="boxContent md-padding" ng-show="etherpadTemplateUrl">
+    <md-content class="boxContent md-padding" ng-show="etherpadTemplateUrl" ng-if="isMember || isOwner">
         <section class="md-whiteframe-z1">
             <md-toolbar>
                 <div class="md-toolbar-tools">
