--- a/client/app/modules/admin/challenge/templates/modal/challenge-template-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-template-modal.tpl.html
@@ -16,15 +16,21 @@
         </md-toolbar>
         <md-content>
                 <md-input-container>
-                    <!--<label for="title">Template's title</label>-->
+                    <label>Title</label>
                     <input type="text" id="title" name="title" ng-model="newTemplate.title" required></input>
                 </md-input-container>
+                
                 <div ng-messages = "templateForm.title.$error" ng-if="!templateForm.title.$pristine">
                     <div ng-message="required">
                         title is required
                     </div>
                 </div>
-                <textarea name="description" ng-model="newTemplate.description" placeholder="Description" name="description" style="width:100%" rows="5"></textarea>
+
+                <md-input-container>
+                    <label>Description</label>
+                    <input name="description" ng-model="newTemplate.description"  name="description"></input>
+                </md-input-container>
+
                 <textarea ui-tinymce="tinymceOption" name='brief'  ng-model="newTemplate.content"/></textarea>
                 <div ng-messages="templateForm.description.$error" ng-if="!templateForm.$pristine">
                     <div ng-message="required">
