Templates in notes

--- a/client/app/modules/project/templates/project-home.tpl.html
+++ b/client/app/modules/project/templates/project-home.tpl.html
@@ -14,7 +14,7 @@
         </div>
     </div>
 
-    <list-notes project="project" current-user="currentUser"></list-notes>
+    <list-notes project="project" current-user="currentUser" templates="templates"></list-notes>
 
     <h3>Related Ideas</h3>
 
