--- a/client/app/modules/admin/challenge/templates/modal/challenge-template-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-template-modal.tpl.html
@@ -2,11 +2,11 @@
     <form name="templateForm">
         <md-toolbar layout="row" layout-align="">
             <div layout layout-align="start center">
-                <span flex>Note templates</span>
+                <span flex>{{title}}</span>
                 <span class="faa-spin animated" ng-if="isLoading">
                         <i class="fa fa-spinner"></i>
                     </span>
-                <md-button class="md-fab" ng-click="createTemplate(newTemplate)" ng-disabled="templateForm.$invalid">
+                <md-button class="md-fab" ng-click="save(newTemplate)" ng-disabled="templateForm.$invalid">
                     <i class="fa fa-save"></i>
                 </md-button>
                 <md-button class="md-fab" ng-click="cancel()">
