--- a/client/app/modules/profile/templates/profile.tpl.html
+++ b/client/app/modules/profile/templates/profile.tpl.html
@@ -33,7 +33,12 @@
                     </div>
 
                     <div>
-                        <challenge-card ng-repeat="challenge in moreData.challenges" admin="true" challenge-id="challenge._id"></challenge-card>
+                        <!-- <challenge-card ng-repeat="challenge in moreData.challenges" admin="true" challenge-id="challenge._id"></challenge-card> -->
+                        <md-grid-list md-cols="3" md-row-height="500px">
+                            <md-grid-tile ng-repeat="challenge in moreData.challenges">
+                                <challenge-card class="md-whiteframe-z2" admin="true" challenge-id="challenge._id" style="height: 410px;"></challenge-card> 
+                            </md-grid-tile>
+                        </md-grid-list>
                     </div>
                 </div>
 
@@ -45,7 +50,12 @@
                     </div>
 
                     <div>
-                        <challenge-card ng-repeat="challenge in moreData.followedChallenges" challenge-id="challenge._id"></challenge-card>
+                        <!-- <challenge-card ng-repeat="challenge in moreData.followedChallenges" challenge-id="challenge._id"></challenge-card> -->
+                        <md-grid-list md-cols="3" md-row-height="500px">
+                            <md-grid-tile ng-repeat="challenge in moreData.challenges">
+                                <challenge-card class="md-whiteframe-z2" admin="true" challenge-id="challenge._id" style="height: 410px;"></challenge-card> 
+                            </md-grid-tile>
+                        </md-grid-list>
                     </div>
                 </div>
 
@@ -57,7 +67,11 @@
                     </div>
 
                     <div>
-                        <project-card ng-repeat="project in moreData.projects" admin="true" project-id="project._id"></project-card>
+                        <md-grid-list md-cols="3" md-row-height="500px">
+                            <md-grid-tile ng-repeat="project in moreData.projects">
+                                <project-card class="md-whiteframe-z2" admin="true" project-id="project._id" style="height: 410px;"></project-card> 
+                            </md-grid-tile>
+                        </md-grid-list>
                     </div>
                 </div>
 
@@ -69,7 +83,11 @@
                     </div>
 
                     <div>
-                        <project-card ng-repeat="project in moreData.memberProjects" project-id="project._id"></project-card>
+                        <md-grid-list md-cols="3" md-row-height="500px">
+                            <md-grid-tile ng-repeat="project in moreData.memberProjects">
+                                <project-card class="md-whiteframe-z2" project-id="project._id"style="height: 410px;"></project-card> 
+                            </md-grid-tile>
+                        </md-grid-list>
                     </div>
                 </div>
 
