--- a/client/app/modules/home/sass/home.scss
+++ b/client/app/modules/home/sass/home.scss
@@ -64,3 +64,8 @@ challenge-card {
   min-width: 250px;
   max-width: 250px;
 }
+
+challenge-more-card {
+  min-width: 250px;
+  max-width: 250px;
+}
